ghc-4335c07/testsuite/tests/deriving/should_fail/T3834.hs

{-# LANGUAGE StandaloneDeriving #-}

class C a
instance C Int

newtype T = T Int
deriving instance C T

